force-app/main/default/objects/Lead_Outbound_Staging__c/Lead_Outbound_Staging__c.object-meta.xml
<CustomObject>
    <label>Lead Outbound Staging</label>
    <nameField>
        <label>Lead_Outbound_Staging_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead_Outbound_Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>