force-app/main/default/objects/Lead_Outbound_Staging__c/fields/chunkNumber__c.field-meta.xml
<CustomField>
    <fullName>chunkNumber__c</fullName>
    <label>chunkNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>