force-app/main/default/objects/Lead_Outbound_Staging__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <label>Payload_JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>