force-app/main/default/objects/Lead_Outbound_Staging__c/fields/records__c.field-meta.xml
<CustomField>
    <fullName>records__c</fullName>
    <label>records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>