force-app/main/default/objects/Lead_Outbound_Staging__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response_JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>