force-app/main/default/objects/Lead_Outbound_Staging__c/fields/Source_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_Id__c</fullName>
    <label>Source_Lead_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>