force-app/main/default/objects/Lead_Outbound_Staging__c/fields/totalChunks__c.field-meta.xml
<CustomField>
    <fullName>totalChunks__c</fullName>
    <label>totalChunks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>